소켓추가완료 3가지모드

--- a/views/chat_in.ejs
+++ b/views/chat_in.ejs
@@ -51,7 +51,7 @@
 		<div class="btn btn-danger col-12" id="chatin_toggle"></div>
 		<div id="chatPanel" class="container row col-sm-12 chatPanel_in" style="padding-bottom: 0px;">
 				<div align="top" class="col-9 chatin_des">
-					<div id="messages" class="messagePanel_in wordwrap rounded"></div>
+					<div id="messages" style="overflow:scroll; overflow-x: hidden; overflow-y: hidden;"  class="messagePanel_in wordwrap rounded"></div>
 				</div>
 				<div class="col-3">
 					<center>
